<resources>

    <string name="app_name">MyTweet</string>
    <string name="title_activity_mytweet">MyTweetActivity</string>
    <string name="registration_date"> </string>
    <string name="new_tweet">New Tweet</string>
    <string name="settings">Settings</string>

    <string name="landlord">Prospective Tenant</string>
    <string name="tweet_report">Send Tweet via Email</string>

    <string name="tweet_report_rented">The tweet is already let.</string>
    <string name="tweet_report_not_rented">The tweet is still available.</string>
    <string name="tweet_report_nobody_interested">There is no other prospective tenant at this time.</string>
    <string name="tweet_report_prospective_tenant">The prospective tenant is %s.</string>
    <string name="tweet_report_subject">Status Report on Tweet Availability</string>
    <string name="send_tweet">Send tweet report via</string>

    <string name="delete_tweet">Delete Tweet</string>

    <string name="username_summary">Please enter your user name</string>
    <string name="username">Username</string>
    <string name="password_summary">You may set your password here</string>
    <string name="password">Password</string>
    <string name="nmr_tweets">Configure Downloads</string>
    <string name="nmr_tweets_summary">How many Tweets to store locally?</string>
    <string name="set_refresh_interval">Refresh</string>
    <string name="set_refresh_interval_summary">Frequency of cloud updates (minutes)</string>
    <string name="messageText">What\'s on your mind??</string>
    <string name="textboxHeader">Hello, how are you???</string>
    <string name="logout">Logout</string>
    <string name="timeline">TimeLine</string>
    <string name="menu">Menu</string>

    <string name="welcomeTitle">Welcome to myTweetApp</string>
    <string name="twitterIcon">Twitter Icon</string>
    <string name="welcomeMessage">Tweet me - I dare you!!</string>
    <string name="welcomeLogin">Login</string>
    <string name="welcomeSignup">Signup</string>

    //----------- Signup -----------\\
    <string name="signUpTitle">Please enter your details</string>
    <string name="signupFirstName"> first name</string>
    <string name="signupLastName">last name</string>
    <string name="signupEmail">email</string>
    <string name="signupPassword">password</string>
    <string name="signupButton">Signup</string>

    //----------- Login -----------\\
    <string name="loginTitle">Enter your email and password</string>
    <string name="loginSubtitle">you must be signed up to enter</string>
    <string name="loginEmail">email</string>
    <string name="loginPassword">password</string>
    <string name="login">Login</string>


</resources>
