<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00aced"
    tools:context="app.tweeting.Login">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/loginTitle"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/loginSubtitle"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <ImageView
        android:id="@+id/twitterIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/twitter_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/twitter_bird"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/loginSubtitle"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/loginEmail" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:ems="10"
        android:hint="@string/loginEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/loginSubtitle"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/loginPassword"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

    <Button
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_color_edges"
        android:text="@string/login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:onClick="loginPressed"/>

</android.support.constraint.ConstraintLayout>